# films

./: .dockerignore  .env.example  .gitignore  README.md  package.json  requirements.txt  vite.config.js
.github/workflows/: deploy.yml  desktop.yml
deploy/: .env.example  Dockerfile  README.md  compose.yaml
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/permissions/: player.toml
desktop/src-tauri/src/: lib.rs  main.rs
site/: .env.example  .gitignore  package-lock.json
site/src/: app.css
site/src/lib/: stores.js  util.js
site/src/lib/components/: Poster.svelte  Toast.svelte
site/src/lib/server/: db.js  images.js  meta.js
site/src/routes/: +layout.server.js  +page.server.js  +page.svelte
src/: app.css  app.html  hooks.server.js
src/lib/: stores.js  util.js
src/lib/components/: AddFilmDialog.svelte  DownloadRow.svelte  FilmCard.svelte  Icon.svelte  LocalRow.svelte  Sparkline.svelte
src/lib/server/: certAge.mjs  db.js  ia.js  manualFilms.js  media.js  meta.js  prowlarr.js  prowlarrClient.js  qbittorrent.js  qbittorrentClient.js  radarr.js  radarrClient.js  tmdbClient.js  transcode.js
src/routes/: +layout.server.js  +layout.svelte  +page.svelte
src/routes/api/app-auth/: +server.js
src/routes/downloads/: +page.server.js  +page.svelte
src/routes/letterboxd/: +page.server.js  +page.svelte
sync/: backfill_certs.mjs  tspdt_sync.py
test/: manual-films.test.js  prowlarr.test.js  qbittorrent.test.js  radarr.test.js  tspdt_sync_manual.test.py
(+26 files in other folders)
