[package]
name = "films-desktop"
version = "0.1.0"
description = "Film Index desktop"
edition = "2021"

[lib]
name = "films_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
